WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165731
Animation followed by transition doesn't always fire transitionend event
https://bugs.webkit.org/show_bug.cgi?id=165731
Summary
Animation followed by transition doesn't always fire transitionend event
Simon Fraser (smfr)
Reported
2016-12-10 12:46:33 PST
Animation followed by transition doesn't always fire transitionend event
Attachments
Patch
(8.42 KB, patch)
2016-12-10 12:50 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-cq-03 for mac-yosemite
(1.13 MB, application/zip)
2016-12-10 14:00 PST
,
WebKit Commit Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-12-10 12:50:14 PST
Created
attachment 296817
[details]
Patch
Simon Fraser (smfr)
Comment 2
2016-12-10 12:55:33 PST
rdar://problem/28471240
WebKit Commit Bot
Comment 3
2016-12-10 13:47:08 PST
The commit-queue encountered the following flaky tests while processing
attachment 296817
[details]
: http/tests/misc/acid3.html
bug 165734
(authors:
abecsi@webkit.org
,
arv@chromium.org
,
mitz@webkit.org
,
rniwa@webkit.org
, and
tonyg@chromium.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4
2016-12-10 13:47:11 PST
The commit-queue encountered the following flaky tests while processing
attachment 296817
[details]
: The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2016-12-10 14:00:18 PST
Comment on
attachment 296817
[details]
Patch Rejecting
attachment 296817
[details]
from commit-queue. New failing tests: inspector/codemirror/prettyprinting-javascript.html Full output:
http://webkit-queues.webkit.org/results/2691023
WebKit Commit Bot
Comment 6
2016-12-10 14:00:21 PST
Created
attachment 296823
[details]
Archive of layout-test-results from webkit-cq-03 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-03 Port: mac-yosemite Platform: Mac OS X 10.10.5
WebKit Commit Bot
Comment 7
2016-12-10 14:29:56 PST
Comment on
attachment 296817
[details]
Patch Clearing flags on attachment: 296817 Committed
r209675
: <
http://trac.webkit.org/changeset/209675
>
WebKit Commit Bot
Comment 8
2016-12-10 14:30:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug